--- a/notebooks/how_to_use_tfds.ipynb
+++ b/notebooks/how_to_use_tfds.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "north-bench",
+   "execution_count": 20,
+   "id": "periodic-values",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,14 @@
     "import numpy as np \n",
     "import pandas as pd \n",
     "\n",
-    "import matplotlib.pyplot as plt "
+    "import matplotlib.pyplot as plt \n",
+    "from pathlib import Path "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "executed-separate",
+   "execution_count": 29,
+   "id": "forbidden-division",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,25 +39,56 @@
     "                      \"1.2.826.0.1.3680043.8.498.59008169249054242133470997981950698585.jpg\",\n",
     "                      \"1.2.826.0.1.3680043.8.498.74067092954277858591731369789552043856.jpg\",\n",
     "                      \"1.2.826.0.1.3680043.8.498.98113606368909263623427693214007380286.jpg\"]\n",
-    "train_paths = [f\"data/partial_train/\" + path for path in partial_train_paths]\n",
+    "train_paths = [\"../data/partial_train/\" + path for path in partial_train_paths]\n",
     "\n",
-    "labels = [0]*8 + [1]*8 "
+    "labels = [0]*8 + [1]*8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "superior-pastor",
+   "execution_count": 27,
+   "id": "marked-quantity",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.826.0.1.3680043.8.498.10512646429067653616115199126403653207.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.10553203729695529217457522953701922196.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.10600230317881874653883891692747043009.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.10624933077182432060278847366271157598.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.11622806412637082718421427225521519105.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.22722315540436745494925507742445314611.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.24659262645697474332452835516529431375.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.25104812635631369211532685559484916373.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.26125446155146594477818772749289794656.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.30175383221630293697688953326853182323.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.39765309636918130294613488440061655672.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.46964849257665456312075806312231735913.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.55922793951803274282980287168731264210.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.59008169249054242133470997981950698585.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.74067092954277858591731369789552043856.jpg\r\n",
+      "1.2.826.0.1.3680043.8.498.98113606368909263623427693214007380286.jpg\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls ../data/partial_train/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "italic-heart",
+   "metadata": {},
    "source": [
     "AUTO = tf.data.experimental.AUTOTUNE #最大並列計算数?, ただの-1?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "behavioral-baghdad",
+   "execution_count": 4,
+   "id": "floating-recovery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prescribed-instrumentation",
+   "id": "outside-robin",
    "metadata": {},
    "source": [
     "## How to load data"
@@ -81,8 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "independent-daisy",
+   "execution_count": 31,
+   "id": "fabulous-schema",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "downtown-liquid",
+   "id": "disturbed-samuel",
    "metadata": {},
    "source": [
     "## How to decode images"
@@ -111,8 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "spoken-button",
+   "execution_count": 32,
+   "id": "cloudy-genealogy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +154,7 @@
     "    img = tf.cast(img,tf.float32) #float32にcast\n",
     "    img /= 255.0\n",
     "    img = tf.image.resize(img,[256,256])\n",
-    "    return img \n",
+    "    return img\n",
     "\n",
     "def decoder_with_label(img_path,label):\n",
     "    return decoder(img_path),label"
@@ -130,8 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "accurate-drink",
+   "execution_count": 42,
+   "id": "surprised-bloom",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hidden-content",
+   "id": "committed-tribe",
    "metadata": {},
    "source": [
     "## How  to show images"
@@ -160,8 +192,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "lesbian-replacement",
+   "execution_count": 34,
+   "id": "middle-storage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,8 +215,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "difficult-moscow",
+   "execution_count": 35,
+   "id": "accessible-framing",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "subjective-brunswick",
+   "id": "pressing-involvement",
    "metadata": {},
    "source": [
     "## How to train "
@@ -212,44 +244,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "thrown-ministry",
+   "execution_count": 44,
+   "id": "civil-dutch",
    "metadata": {},
    "outputs": [],
    "source": [
     "#train\n",
-    "train_data = train_data.repeat(count=2) #デフォルトではcount = None(repeated indefinetely)\n",
-    "train_data = train_data.shuffle(buffer_size=4) #画像をシャッフルする, buffer_sizeはメモリにのるandデータサイズ以下で範囲でできるだけ大きくするとよい\n",
-    "train_data = train_data.batch(2)\n",
-    "train_data = train_data.prefetch(AUTO)\n",
+    "train_data1 = train_data.repeat(count=2) #デフォルトではcount = None(repeated indefinetely)\n",
+    "train_data1 = train_data1.shuffle(buffer_size=4) #画像をシャッフルする, buffer_sizeはメモリにのるandデータサイズ以下で範囲でできるだけ大きくするとよい\n",
+    "train_data1 = train_data1.batch(2)\n",
+    "train_data1 = train_data1.prefetch(AUTO)\n",
     "\n",
     "#test\n",
-    "test_data = test_data.batch(2)\n",
-    "test_data = test_data.prefetch(AUTO)"
+    "test_data1 = test_data.batch(2)\n",
+    "test_data1 = test_data1.prefetch(AUTO)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "exceptional-springer",
+   "execution_count": 41,
+   "id": "pressed-dressing",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = create_model()\n",
-    "history = model.fit(train_data,\n",
-    "                    epochs=1)\n",
+    "#model = create_model()\n",
+    "#history = model.fit(train_data1,\n",
+    "#                    epochs=1)\n",
     "#kernel dead "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "french-hello",
+   "id": "verified-refund",
    "metadata": {},
    "source": [
     "## More \n",
     "- How to augment data <br> \n",
-    "- How to cache data for speeding up training<br>"
+    "- How to cache data for speeding up training <br> "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "suburban-lighter",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def augment(img):\n",
+    "    img = tf.image.random_flip_left_right(img)\n",
+    "    img = tf.image.random_flip_up_down(img)\n",
+    "    img = tf.image.random_hue(img,max_delta=0.01)\n",
+    "    img = tf.image.random_saturation(img,lower=0.70,upper=1.30) #factor\n",
+    "    img = tf.image.random_contrast(img,lower=0.80,upper=1.20) #factor\n",
+    "    img = tf.image.random_brightness(img,max_delta=0.10)\n",
+    "    return img \n",
+    "\n",
+    "def augment_with_label(img,label):\n",
+    "    return augment(img),label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "iraqi-tucson",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#train\n",
+    "train_data2 = train_data.cache()\n",
+    "train_data2 = train_data2.map(augment_with_label)\n",
+    "train_data2 = train_data2.repeat(count=2) #デフォルトではcount = None(repeated indefinetely)\n",
+    "train_data2 = train_data2.shuffle(buffer_size=4) #画像をシャッフルする, buffer_sizeはメモリにのるandデータサイズ以下で範囲でできるだけ大きくするとよい\n",
+    "train_data2 = train_data2.batch(2)\n",
+    "train_data2 = train_data2.prefetch(AUTO)\n",
+    "\n",
+    "#test\n",
+    "test_data2 = test_data.cache()\n",
+    "test_data2 = test_data2.map(augment)\n",
+    "test_data2 = test_data2.batch(2)\n",
+    "test_data2 = test_data2.prefetch(AUTO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "charitable-diesel",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model = create_model()\n",
+    "#history = model.fit(train_data2,\n",
+    "#                    epochs=1)\n",
+    "#kernel dead "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "unsigned-alcohol",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
